# shiloh-gym

./: README.md  app.py  forms.py  pyproject.toml  requirements.txt
static/: banner.avif  gym.avif
templates/: alterednav.html  banner.html  bootstrap.html  communities.html  footer.html  home.html  login.html  nav.html  register.html
